--- a/estilo/style.css
+++ b/estilo/style.css
@@ -39,3 +39,11 @@ section#telefone {
 
 }
 
+iframe#tela {
+    position: relative;
+    top: 80px;
+    left: 22px;
+    width: 269px;
+    height: 471px;
+
+}
