--- a/estilo/style.css
+++ b/estilo/style.css
@@ -47,3 +47,24 @@ iframe#tela {
     height: 471px;
 
 }
+
+section#redes-sociais {
+ text-align: right;
+}
+
+section#redes-sociais > a > img {
+    width: 50px;
+    margin: 10px;
+    border-radius: 25px;
+    box-shadow: 2px 2px 5px black ;
+    box-sizing: border-box;
+
+}
+
+section#redes-sociais img:hover{
+    border: 2px solid rgba(255, 255, 255, 0.622);
+    transform: translate(-3px, -3px);
+    box-shadow: 5px 5px 10px black;
+    transition: transform .4s, border .5s;
+
+}
