--- a/estilos/style.css
+++ b/estilos/style.css
@@ -1,56 +1,128 @@
 @charset "UTF-8";
-
-/*MOBILE FIRST */
-
 * {
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 1em;
     margin: 0px;
     padding: 0px;
-    box-sizing: border-box;
+}
+
+body, html {
+    background-color: aqua;
+}
+
+header {
+    background-color: gray;
+  
+}
+
+header h1 {
+    padding: 10px;
+    text-align: center;
 
 }
 
-html {
-    height: 100vh;
+span#burguer {
+    background-color: rgb(34, 34, 34);
     width: 100vw;
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 20px;
+    cursor: pointer;
+
 }
 
+span#burguer:hover{
+    background-color: white;
+    color: black;
+ 
+}
 
-body {
-    background: black url(../imagens/back-phone.jpg) no-repeat;
-    background-size:cover;
-    background-position: center center;
+menu {
+    display: none;
+    
+}
+
+menu ul  {
+    list-style-type: none;
+}
+
+menu > ul > li > a {
+    display: block;
+    padding: 10px;
+    text-decoration: none;
+    background-color: rgb(73, 72, 72);
+    color: white;
+    text-align: center;
+    border-top: 2px solid rgb(206, 205, 205);
+
+}
+
+menu > ul > li > a:hover {
+    background-color: gray;
 
 }
 
 main {
-    background-color: rgba(255, 255, 255, 0.526);
-    width: 400px;
+    width: 90vw;
+    background-color: white;
     margin: auto;
-    margin-top: 20px;
-    border-radius: 10px;
+    margin-top: 10px;
     padding: 10px;
+    border-radius: 10px;
+}
+
+article h2 {
+    padding-bottom: 20px;
 
 }
 
-h1 {
-    text-align: center;
+article p {
+    text-align: justify;
+    margin-bottom: 10px;
+    text-indent: 20px;
+
+
+
+}
+/*
+
+main {
+    background-color: bisque;
+}
+
+article {
+    background-color: cadetblue;
+}
+
+header {
+    background-color: azure;
+}
+
+menu {
+    background-color: chartreuse;
+    
+}
+
+p {
+    background-color: chocolate;
+}
+
+h1, h2 {
+    background-color: crimson;
+}
+
+a {
+    background-color: darkolivegreen;
     color: white;
-    text-shadow: 2px 2px 2px black;
-    font-size: 2em;
-
+    text-decoration: none;
+    
 }
 
-img {
-    display: block;
-    margin: auto;
+li {
+    display: inline-block;
+   
+
+    
 }
 
-img#phone { display: block;}
-img#print {display: none;}
-img#tablet {display: none;}
-img#pc {display: none;}
-img#tv {display: none;}
-
-
+*/
